
Slick 8.x-2.0-dev, 2016-06-19
-----------------------------
- Moved thumbnails outside the loop.
- Allowed Slick to run at least the lazyload on an unslick.

Slick 8.x-2.0-dev, 2016-06-13
-----------------------------
- Added lightbox caption option.
- Fixed for Blazy integration with hidden captions.

Slick 8.x-2.0-dev, 2016-06-10
-----------------------------
- Simplified SlickFormatter::buildSettings() a bit, and clarified descriptions.

Slick 8.x-2.0-dev, 2016-06-08
-----------------------------
- #2744741 by federico.bebber: Issues with responsive image styles.

Slick 8.x-2.0-dev, 2016-06-07
-----------------------------
- Added support to lazyload CSS background when unslick takes place.
- Removed workaround with slick-current classes which is fixed at v1.6.0.
- Fixed for broken responsive options.

Slick 8.x-2.0-dev, 2016-05-09
-----------------------------
- Removed redundant Preloader option since the classes are within image
  containers. Maybe more reasonable for Views later which can text, images, etc.

Slick 8.x-2.0-dev, 2016-05-07
-----------------------------
- Fixed for broken dots.
- Update arrows defaults values.
- Updated slick.load.min.js to v1.6.0.

Slick 8.x-2.0-dev, 2016-05-05
-----------------------------
- Updated JS to Blazy JS v1.6.0 as per [#2716765].
- Added option Preloader for Slick > 1.5.9 which is unfortunately still broken.
- Removed _slick_build_slide() to reduce function calls.
- Removed expensive SlickManager::getAvailableSkins().
- More cleanups.

Slick 8.x-2.0-dev, 2016-04-22
-----------------------------
- A couple of cleanups.
- #2710221 by xanterax: Fatal error by colliding constructor traits.

Slick 8.x-2.0-dev, 2016-04-11
-----------------------------
- Ported hook_requirements().
- A couple of cleanups.

Slick 8.x-2.0-dev, 2016-04-09
-----------------------------
- Fixed for broken core library grid Rows.

Slick 8.x-2.0-dev, 2016-04-08
-----------------------------
- Cleaned up thumbnails leftovers.
