@@ -1,15 +1,9 @@
 name: 'Slick UI'
 type: module
 description: 'Provides Slick carousel configuration UI.'
-# version: VERSION
-# core: 8.x
+version: VERSION
+core: 8.x
 package: Slick
 configure: entity.slick.collection
 dependencies:
   - slick
-
-# Information added by Drupal.org packaging script on 2016-06-19
-version: '8.x-1.0-beta2+8-dev'
-core: '8.x'
-project: 'slick'
-datestamp: 1466344980
