@@ -1,10 +1,5 @@
 <?php
 
-/**
- * @file
- * Contains \Drupal\slick_ui\Controller\SlickListBuilder.
- */
-
 namespace Drupal\slick_ui\Controller;
 
 use Drupal\Component\Utility\Html;
