@@ -1,10 +1,5 @@
 <?php
 
-/**
- * @file
- * Contains \Drupal\slick\SlickDefault.
- */
-
 namespace Drupal\slick;
 
 use Drupal\blazy\Dejavu\BlazyDefault;
